kubernetes/apps/observability/victoria-metrics/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vmsingle
spec:
  hostnames:
    - "metrics.${SECRET_DOMAIN}"
  parentRefs:
    - name: kgateway-internal
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: vmsingle-stack
          port: 8429
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vmalertmanager
spec:
  hostnames:
    - "alertmanager.${SECRET_DOMAIN}"
  parentRefs:
    - name: kgateway-internal
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: vmalertmanager-stack
          port: 9093
