kubernetes/apps/observability/victoria-metrics/app/securitypolicy.yaml
---
# yaml-language-server: $schema=https://kubernetes-schema.pages.dev/gateway.envoyproxy.io/securitypolicy_v1alpha1.json
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: vmsingle-oidc
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: vmsingle
  oidc:
    provider:
      issuer: https://id.${SECRET_DOMAIN}
    clientID: victoria-metrics
    clientSecret:
      name: vmsingle-oidc-secret
    redirectURL: https://metrics.${SECRET_DOMAIN}/oauth2/callback
    logoutPath: /oauth2/logout
    defaultTokenTTL: 15m
    defaultRefreshTokenTTL: 1h
    scopes:
      - openid
      - email
      - profile
---
# yaml-language-server: $schema=https://kubernetes-schema.pages.dev/gateway.envoyproxy.io/securitypolicy_v1alpha1.json
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: vmalertmanager-oidc
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: vmalertmanager
  oidc:
    provider:
      issuer: https://id.${SECRET_DOMAIN}
    clientID: alertmanager
    clientSecret:
      name: vmalertmanager-oidc-secret
    redirectURL: https://alertmanager.${SECRET_DOMAIN}/oauth2/callback
    logoutPath: /oauth2/logout
    defaultTokenTTL: 15m
    defaultRefreshTokenTTL: 1h
    scopes:
      - openid
      - email
      - profile
